# docs/swagger.yaml
@@ -81,6 +81,31 @@ paths:
       summary: 登录接口
       tags:
       - 认证
+  /customers/query:
+    get:
+      consumes:
+      - application/json
+      description: 查询客户信息
+      parameters:
+      - example: 1
+        in: query
+        name: currentIndex
+        type: integer
+      - in: query
+        name: customerName
+        type: string
+      - example: 10
+        in: query
+        name: pageSize
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+      summary: 查询客户信息
+      tags:
+      - 客户
   /users/getUsers:
     get:
       consumes:
