# models/common.go
@@ -20,17 +20,23 @@ func OK(context *gin.Context, data interface{}) {
 }
 
 type Pages struct {
-	PageSize     int
-	CurrentIndex int
-	Total        int64
-	Data         interface{}
+	PageSize     int `form:"pageSize" json:"pageSize" example:"10"`
+	CurrentIndex int `form:"currentIndex" json:"currentIndex" example:"1"`
+}
+type ResultPages struct {
+	Pages
+	Total int64
+	Data  interface{}
 }
 type Base struct {
-	PageParams Pages
+	Pages
 }
 
-func ToPages(pageSize int, currentIndex int, total int64, data interface{}) Pages {
-	return Pages{pageSize, currentIndex, total, data}
+func ToResultPages(page Pages, total int64, data interface{}) ResultPages {
+	return ResultPages{
+		Pages: page,
+		Total: total, Data: data,
+	}
 }
 
 //func OK(context *gin.Context) {
